Fix asset editor field overflow

--- a/resources/css/components/assets.css
+++ b/resources/css/components/assets.css
@@ -185,6 +185,10 @@
     .loading {
         @apply absolute inset-0 z-10 flex items-center justify-center rounded-sm bg-white/70;
     }
+
+    .publish-fields {
+        @apply block;
+    }
 }
 
 /* Lazyloading
